syntax = "proto3";

package user;


service UserService {
    rpc Create(UserRequest) returns (UserResponse) {}
    rpc GetUserById(IdRequest) returns (UserResponse) {}
    rpc GetUserForClient(IdRequest) returns (UserResponse) {}
    rpc GetUsers(UserForGetUsers) returns (Users) {}
    rpc UpdateUser(UserRequest) returns (UserForUpdate) {}
    rpc DeleteUser(IdRequest) returns (UserForUpdate) {}
}

message UserRequest {
    string id = 1;
    string name = 2;
    string email = 3;
}

message UserForUpdate {
    string id = 1;
    string name = 2;
    string email = 3;
    string created_at =4;
    string updated_at = 5;
}

message UserResponse {
    string id = 1;
    string name = 2;
    string email = 3;
    repeated Post posts=4;
    string created_at = 5;
    string updates_at = 6;
}

message Users {
    repeated UserResponse users = 1;
}

message Post {
    string id= 1;
    string title = 2;
    string description=3;
    repeated Comments comments = 4;
    string created_at = 5;
    string updated_at = 6;
}

message IdRequest {
    string id = 1;
}

message UserForGetUsers {
    int64 limit = 1;
    int64 page = 2;
}

message Comments {
    string user_id = 1;
    string post_id = 2;
    string text = 3;
}